namespace Allors.Core.Database.Engines.Meta
{
    using Allors.Core.Meta.Domain;
    using Allors.Core.Meta.Meta;

    /// <summary>
    /// A method type.
    /// </summary>
    public sealed class MethodType : OperandType
    {
    }
}
