classDiagram
    class Class
    Composite <|-- Class
    class Composite
    <<interface>> Composite
    Composite o-- Class : Concretes
    Composite o-- MethodType
    class ConcreteMethodType
    ConcreteMethodType : Actions Actions
    ConcreteMethodType o-- Class
    ConcreteMethodType o-- MethodPart
    class MethodPart
    MethodPart : Action Action
    MethodPart o-- Composite
    MethodPart : Domain Domain
    class MethodType
    MethodType o-- ConcreteMethodType
    MethodType o-- MethodPart
    MethodType : String Name
